web-infras/parser/tests/fixtures/self-added/await-in-async-context/await-as-func-expr-name/strict-mode-parent-async-current-async/output.txt
[SyntaxError]: Can not use 'await' as identifier inside an async function. (3,34)
3|    const child = async function await() {
 |                                ^
